# kwtransport

./: .gitignore  .gitmodules  AGENTS.md  PROGRESS.md  README.md  build.gradle.kts  gradle.properties  measure_tests.py  settings.gradle.kts  wtransport_kotlin_gap_analysis.md
.github/workflows/: ci.yml  publish.yml  stress-tests.yml
.llm_kb/: native_artifact_strategy.md  reactive_jni_bridge.md  robusta_jni_docs.md  robusta_knowledge_bible.md  rust_gradle_plugin.md  rust_knowledge_bible.md  rust_shared_state.md  testing_strategy.md  uniffi_jni_guide.md  vanniktech_publishing.md  webtransport_guide.md
.llm_kb/working/: gobley_research.md  robusta_callbacks.md  robusta_raw.md  rust_shared_state_raw.md  sal_dev_article.md  uniffi_jni_research.md  uniffi_jni_search_results.md  uniffi_kmp_bindings_repo.md  uniffi_kmp_ubique.md  uniffi_next_kotlin.md
cli-chat/: build.gradle.kts
composeApp/: build.gradle.kts
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: examples.md
gradle/: libs.versions.toml
kwtransport/: build.gradle.kts
kwtransport-ffi/: Cargo.toml  uniffi.toml
kwtransport-ffi/bindings/ovh/devcraft/kwtransport/ffi/: kwtransport_ffi.kt
kwtransport-ffi/src/: api.udl  errors.rs  lib.rs  objects.rs  runtime.rs  utils.rs
libraries/test-support/: build.gradle.kts
native/linux-arm64/: build.gradle.kts
native/linux-x64/: build.gradle.kts
native/macos-arm64/: build.gradle.kts
scripts/: run_browser_integration_tests.sh  run_wasm_integration_tests.sh
server/: build.gradle.kts
shared/: build.gradle.kts
(+197 files in other folders)
