[package]
name = "kwtransport-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "kwtransport_ffi"

[dependencies]
robusta_jni = "0.2"
jni = "0.21"
wtransport = { path = "../wtransport/wtransport", features = ["dangerous-configuration", "quinn"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
lazy_static = "1.4"
bytemuck = "1.14"
once_cell = "1.18"

[build-dependencies]
